[gd_scene load_steps=16 format=3 uid="uid://bnjcpqgueo6s5"]

[ext_resource type="Script" path="res://demo-fighting/Main.gd" id="1_adh32"]
[ext_resource type="FontFile" uid="uid://va7ac8iahrws" path="res://assets/monogram_extended.ttf" id="2_dfey0"]
[ext_resource type="Script" path="res://demo-fighting/scripts/FightManager.gd" id="3_yyshs"]
[ext_resource type="Script" path="res://addons/delta_rollback/NetworkTimer.gd" id="4_0f5y5"]
[ext_resource type="PackedScene" uid="uid://b8j8obrvlqulg" path="res://demo-fighting/fighter.tscn" id="4_2ampb"]
[ext_resource type="Texture2D" uid="uid://y2qiqet2veue" path="res://assets/godot.png" id="5_ymjv0"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2_dfey0")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2_dfey0")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_0ryd7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e568b"]
bg_color = Color(0.152941, 0.298039, 0.411765, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlmo4"]
bg_color = Color(0.278431, 0.54902, 0.74902, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="CanvasTexture" id="CanvasTexture_42da7"]

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_22kmc"]
extents_x = 2113536
extents_y = 2048000

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_fhlvv"]
extents_x = 44747224
extents_y = 4211184

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_ltkfr"]
extents_x = 3276800
extents_y = 73785184

[node name="Main" type="Node2D"]
script = ExtResource("1_adh32")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -20.0
offset_right = 99.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocalButton" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
text = "Play Locally"

[node name="OnlineButton" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
text = "Play Online"

[node name="ConnectionPanel" type="Window" parent="CanvasLayer"]
title = "Online"
position = Vector2i(0, 36)
size = Vector2i(500, 150)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ConnectionPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Port"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "9999"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ConnectionPanel/VBoxContainer"]
layout_mode = 2

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Client"

[node name="SpectatorButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Spectator"

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -275.0
offset_right = 276.0
offset_bottom = 124.0
theme_override_fonts/font = SubResource("1")
horizontal_alignment = 1

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_bottom = 14.0
theme_override_fonts/font = SubResource("2")
text = "Regaining sync..."

[node name="ResetButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "RESET"

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="ServerHealth" type="ProgressBar" parent="GameUI"]
offset_left = 30.0
offset_top = 30.0
offset_right = 519.0
offset_bottom = 56.0
theme = SubResource("Theme_0ryd7")
theme_override_styles/background = SubResource("StyleBoxFlat_e568b")
theme_override_styles/fill = SubResource("StyleBoxFlat_xlmo4")
max_value = 1000.0
value = 1000.0
fill_mode = 1
show_percentage = false

[node name="ClientHealth" type="ProgressBar" parent="GameUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -519.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 56.0
grow_horizontal = 0
theme = SubResource("Theme_0ryd7")
theme_override_styles/background = SubResource("StyleBoxFlat_e568b")
theme_override_styles/fill = SubResource("StyleBoxFlat_xlmo4")
max_value = 1000.0
value = 1000.0
show_percentage = false

[node name="WinnerText" type="Label" parent="GameUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -157.0
offset_right = 410.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.278431, 0.54902, 0.74902, 1)
theme_override_constants/outline_size = 19
theme_override_font_sizes/font_size = 48
text = "ServerPlayer Wins!"
horizontal_alignment = 1

[node name="FightManager" type="Node" parent="."]
script = ExtResource("3_yyshs")

[node name="RestartRoundTimer" type="Node" parent="FightManager"]
script = ExtResource("4_0f5y5")
one_shot = true
wait_ticks = 180

[node name="BackgroundVisuals" type="Node2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="BackgroundVisuals"]
modulate = Color(0.6715, 0.7189, 0.79, 1)
z_index = -2
position = Vector2(571, 318)
scale = Vector2(1282, 704)
texture = SubResource("CanvasTexture_42da7")

[node name="Sprite2D" type="Sprite2D" parent="BackgroundVisuals"]
modulate = Color(0.1517, 0.29807, 0.41, 1)
z_index = -2
position = Vector2(565, 584)
scale = Vector2(1294, 172)
texture = SubResource("CanvasTexture_42da7")

[node name="Environment" type="SGFixedNode2D" parent="."]

[node name="Platform1" type="SGStaticBody2D" parent="Environment"]
collision_layer = 17
collision_mask = 17
fixed_position_x = 5767168
fixed_position_y = 22106592
fixed_scale_y = 32768
position = Vector2(88, 337.32)
scale = Vector2(1, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="Environment/Platform1"]
z_index = -2
texture = ExtResource("5_ymjv0")

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="Environment/Platform1"]
shape = SubResource("SGRectangleShape2D_22kmc")
modulate = Color(1, 1, 1, 0.27451)

[node name="Platform2" type="SGStaticBody2D" parent="Environment"]
collision_layer = 17
collision_mask = 17
fixed_position_x = 69730304
fixed_position_y = 22106592
fixed_scale_y = 32768
position = Vector2(1064, 337.32)
scale = Vector2(1, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="Environment/Platform2"]
z_index = -2
texture = ExtResource("5_ymjv0")

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="Environment/Platform2"]
shape = SubResource("SGRectangleShape2D_22kmc")
modulate = Color(1, 1, 1, 0.27451)

[node name="Floor" type="SGStaticBody2D" parent="Environment"]
collision_layer = 17
fixed_position_x = 37748736
fixed_position_y = 34013184
position = Vector2(576, 519)

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="Environment/Floor"]
shape = SubResource("SGRectangleShape2D_fhlvv")
fixed_position_y = 4211184
modulate = Color(1, 1, 1, 0.305882)
position = Vector2(0, 64.2576)

[node name="RightWall" type="SGStaticBody2D" parent="Environment"]
fixed_position_x = 78774272
position = Vector2(1202, 0)

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="Environment/RightWall"]
shape = SubResource("SGRectangleShape2D_ltkfr")
fixed_position_y = 21233664
modulate = Color(1, 1, 1, 0.305882)
position = Vector2(0, 324)

[node name="LeftWall" type="SGStaticBody2D" parent="Environment"]
fixed_position_x = -3276800
position = Vector2(-50, 0)

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="Environment/LeftWall"]
shape = SubResource("SGRectangleShape2D_ltkfr")
fixed_position_y = 21233664
modulate = Color(1, 1, 1, 0.305882)
position = Vector2(0, 324)

[node name="ServerPlayer" parent="." node_paths=PackedStringArray("health_bar", "target_fighter") instance=ExtResource("4_2ampb")]
fixed_position_x = 20185088
fixed_position_y = 34013184
position = Vector2(308, 519)
health_bar = NodePath("../GameUI/ServerHealth")
target_fighter = NodePath("../ClientPlayer")

[node name="ClientPlayer" parent="." node_paths=PackedStringArray("health_bar", "target_fighter") instance=ExtResource("4_2ampb")]
fixed_position_x = 55312384
fixed_position_y = 34013184
fixed_scale_x = -65536
position = Vector2(844, 519)
rotation = -3.14159
scale = Vector2(1, -1)
health_bar = NodePath("../GameUI/ClientHealth")
facing_right = false
target_fighter = NodePath("../ServerPlayer")

[node name="Sprite2D" parent="ClientPlayer/Visuals" index="1"]
modulate = Color(0.403922, 1, 0.415686, 1)

[node name="SpawnParent" type="SGFixedNode2D" parent="."]

[connection signal="pressed" from="CanvasLayer/MainMenu/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer/SpectatorButton" to="." method="_on_SpectatorButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="timeout" from="FightManager/RestartRoundTimer" to="FightManager" method="_on_restart_round_timer_timeout"]

[editable path="ClientPlayer"]
